--- a/Day01-15/09.面向对象进阶.md
+++ b/Day01-15/09.面向对象进阶.md
@@ -4,7 +4,7 @@
 
 ### @property装饰器
 
-之前我们讨论过Python中属性和方法访问权限的问题，虽然我们不建议将属性设置为私有的，但是如果直接将属性暴露给外界也是有问题的，比如我们没有办法检查赋给属性的值是否有效。我们之前的建议是将属性命名以单下划线开头，通过这种方式来暗示属性是受保护的，不建议外界直接访问，那么如果想访问属性可以通过属性的getter（访问器）和setter（修改器）方法进行对应的操作。如果要做到这点，就可以考虑使用@property包装器来包装getter和setter方法，使得对属性的访问既安全又方便，代码如下所示。
+之前我们讨论过Python中属性和方法访问权限的问题，虽然我们不建议将属性设置为私有的，但是如果直接将属性暴露给外界也是有问题的，比如我们没有办法检查赋给属性的值是否有效。我们之前的建议是将属性命名以单下划线开头，通过这种方式来暗示属性是受保护的，不建议外界直接访问，那么如果想访问属性可以通过属性的getter（访问器）和setter（修改器）方法进行对应的操作。如果要做到这点，**就可以考虑使用@property包装器来包装getter和setter方法**，使得对属性的访问既安全又方便，代码如下所示。
 
 ```Python
 class Person(object):
@@ -742,3 +742,4 @@ if __name__ == '__main__':
     main()
 ```
 
+   ![Snipaste_2022-04-12_09-49-23](C:\Users\Administrator\Desktop\Snipaste_2022-04-12_09-49-23.png)
