--- a/Day01-15/09.面向对象进阶.md
+++ b/Day01-15/09.面向对象进阶.md
@@ -329,6 +329,64 @@ if __name__ == '__main__':
 
 在上面的代码中，我们将`Pet`类处理成了一个抽象类，所谓抽象类就是不能够创建对象的类，这种类的存在就是专门为了让其他类去继承它。Python从语法层面并没有像Java或C#那样提供对抽象类的支持，但是我们可以通过`abc`模块的`ABCMeta`元类和`abstractmethod`包装器来达到抽象类的效果，如果一个类中存在抽象方法那么这个类就不能够实例化（创建对象）。上面的代码中，`Dog`和`Cat`两个子类分别对`Pet`类中的`make_voice`抽象方法进行了重写并给出了不同的实现版本，当我们在`main`函数中调用该方法时，这个方法就表现出了多态行为（同样的方法做了不同的事情）。
 
+###多继承
+
+```python
+
+class A(object):
+
+    def foo(self):
+        print('foo of A')
+
+
+class B(A):
+    pass
+
+
+class C(A):
+
+    def foo(self):
+        print('foo fo C')
+
+
+class D(B, C):
+    pass
+
+
+class E(D):
+
+    def foo(self):
+        print('foo in E')
+        super().foo()
+        super(B, self).foo()
+        super(C, self).foo()
+
+
+if __name__ == '__main__':
+    d = D()
+    d.foo()
+    e = E()
+    e.foo()
+    ##Python中针对类提供了一个内置属性__mro__可以查看方法的搜索顺序
+    print(E.__mro__)
+
+```
+
+```html
+foo fo C
+foo in E
+foo fo C
+(<class '__main__.E'>, <class '__main__.D'>, <class '__main__.B'>, <class '__main__.C'>, <class '__main__.A'>, <class 'object'>)
+
+```
+
+调用父类方法中 self 并不是父类的实例而是子类的实例，在上例中都是D的实例化对象.
+
+- **经典类**(python2)多继承搜索顺序(深度优先):
+  先深入继承树左侧查找，然后再返回，开始查找右侧
+- **新式类**(python3)多继承搜索顺序(广度优先):
+  先在水平方向查找，然后再向上查找
+
 ### 综合案例
 
 #### 案例1：奥特曼打小怪兽。
