sys && os module

--- a/自学补充/装饰器/闭包与装饰器.md
+++ b/自学补充/装饰器/闭包与装饰器.md
@@ -16,18 +16,18 @@
 
 ### 装饰器是建立在闭包基础上的
 
-![说明](../pictures/Snipaste_2022-04-18_18-15-24.png)
+![说明](../../pictures/Snipaste_2022-04-18_18-15-24.png)
 
 ##### 示例1
 
-![示例1](../pictures/Snipaste_2022-04-18_17-48-10.png)
+![示例1](../../pictures/Snipaste_2022-04-18_17-48-10.png)
 
 
 
 ##### 示例2
 
-![示例2](../pictures/Snipaste_2022-04-18_18-00-52.png)
+![示例2](../../pictures/Snipaste_2022-04-18_18-00-52.png)
 
 ##### 示例3
 
-![示例3](../pictures/Snipaste_2022-04-18_18-03-35.png)
+![示例3](../../pictures/Snipaste_2022-04-18_18-03-35.png)
